[TASK] Add search to header
#48

--- a/src/extensions/site_t3demo/Resources/Private/Pages/Layouts/Default.html
+++ b/src/extensions/site_t3demo/Resources/Private/Pages/Layouts/Default.html
@@ -5,7 +5,7 @@
 
 <f:render section="DropIn/Before" optional="true" />
 
-<f:render partial="Header" arguments="{mainMenu: mainMenu, languageMenu: languageMenu, startpage: startpage, currentpage: currentpage}" />
+<f:render partial="Header" arguments="{mainMenu: mainMenu, languageMenu: languageMenu, startpage: startpage, currentpage: currentpage, searchpage: searchpage}" />
 
 <main>
     <!-- TYPO3SEARCH_begin -->
