--- a/src/extensions/site_t3demo/Resources/Private/Plugins/Solr/Partials/Search/Form.html
+++ b/src/extensions/site_t3demo/Resources/Private/Plugins/Solr/Partials/Search/Form.html
@@ -5,11 +5,11 @@
       data-namespace-typo3-fluid="true"
 >
 <s:searchForm>
-    <div class="b_search__input-wrap">
+    <label class="b_search__input-wrap">
         <input type="search" name="q" value="{q}" class="b_search__input" autocomplete="off"
                placeholder="{f:translate(key: 'search.placeholder', extensionName: 'site_t3demo')}"/>
         <ac:svg name="search" class="b_search__input-icon"/>
-    </div>
+    </label>
 </s:searchForm>
 
 </html>
