--- a/src/extensions/site_t3demo/Resources/Private/Scss/_zindex.scss
+++ b/src/extensions/site_t3demo/Resources/Private/Scss/_zindex.scss
@@ -12,6 +12,7 @@ $z-index-list: (
 	'.b_navi',
 	'.b_navi__submenu',
 	'.b_header__meta',
+    '.b_search--header',
 	'.b_header',
 	'.b_resetbanner__overlay',
 	'.b_resetbanner',
