[TASK] Hide resetbanner trigger when mobile navigation is open
#74

--- a/src/extensions/site_t3demo/Resources/Private/Contenttypes/Templates/Resetbanner.html
+++ b/src/extensions/site_t3demo/Resources/Private/Contenttypes/Templates/Resetbanner.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 </div>
-<label for="resetbanner" class="b_resetbanner__trigger">
+<label for="resetbanner" class="b_resetbanner__trigger bJS_resetbanner-trigger">
 	<ac:svg name="infobanner" class="b_resetbanner__infoicon" additionalAttributes="{aria-hidden: 'true'}" />
 </label>
 
