[TASK] Adapt tracking for umami v2
#86

--- a/src/extensions/demologin/Resources/Private/Templates/DemoLogin.html
+++ b/src/extensions/demologin/Resources/Private/Templates/DemoLogin.html
@@ -37,7 +37,7 @@
 				let usergroup = document.getElementById('demo-login-dropdown');
 				let usergroupText = usergroup.options[usergroup.selectedIndex];
 				let eventLabel = 'Backend Login - ' + usergroupText.text;
-                umami.trackEvent( eventLabel );
+                umami.track( eventLabel );
 			}
 		});
 	</script>
