--- a/src/extensions/site_t3demo/Resources/Private/Contenttypes/Templates/Footerinfo.html
+++ b/src/extensions/site_t3demo/Resources/Private/Contenttypes/Templates/Footerinfo.html
@@ -10,7 +10,7 @@
 
 <f:if condition="{data.link}">
 	<p>
-		<f:link.typolink parameter="{data.link}" class="b_button umami--click--button-backend-login">
+		<f:link.typolink parameter="{data.link}" class="b_button" additionalAttributes="{data-umami-event: 'Backend Login'}">
 			{data.linklabel}
 		</f:link.typolink>
 	</p>
