--- a/src/extensions/site_t3demo/Resources/Private/Plugins/Felogin/Templates/Login/Login.html
+++ b/src/extensions/site_t3demo/Resources/Private/Plugins/Felogin/Templates/Login/Login.html
@@ -55,7 +55,7 @@
 
         <div class="b_login__row b_login__row--submit">
             <f:form.submit value="{f:translate(key: 'login.login', extensionName: 'site_t3demo')}" name="submit" class="b_button b_button--login-submit"
-						onclick="umami.trackEvent('Frontend Login');"/>
+						onclick="umami.track('Frontend Login');"/>
         </div>
 
         <div class="b_login__container b_login__container--hidden">
