--- a/src/extensions/site_t3demo/Resources/Private/Contenttypes/Backend/Partials/Warning/NoImage.html
+++ b/src/extensions/site_t3demo/Resources/Private/Contenttypes/Backend/Partials/Warning/NoImage.html
@@ -3,7 +3,7 @@
     data-namespace-typo3-fluid="true"
 >
 
-<f:if condition="!{images} && !{hidden}">
+<f:if condition="{images -> f:count()} < 1 && !{hidden}">
     <f:render partial="Warning/Message" arguments="{type: 'warning', key: 'pageLayoutView.noImageVisible'}" />
 </f:if>
 
