--- a/src/extensions/site_t3demo/Resources/Private/Contenttypes/Backend/Templates/Textpic.html
+++ b/src/extensions/site_t3demo/Resources/Private/Contenttypes/Backend/Templates/Textpic.html
@@ -8,7 +8,7 @@
     <f:render partial="Images" arguments="{images: allImages}" />
     <f:render partial="Text" arguments="{text: bodytext}" />
 
-    <f:render partial="Warning/FirstImage" arguments="{images: allImages-visible, hidden: hidden}" />
+    <f:render partial="Warning/FirstImage" arguments="{images: allImages, hidden: hidden}" />
 </f:section>
 
 </html>
