--- a/src/extensions/site_t3demo/Resources/Private/Pages/HeaderData/Templates/HeaderData.html
+++ b/src/extensions/site_t3demo/Resources/Private/Pages/HeaderData/Templates/HeaderData.html
@@ -6,9 +6,9 @@
 
 <f:render partial="Favicons"/>
 
-<link rel="preload" as="font" crossorigin="" type="font/woff" href="/typo3conf/ext/site_t3demo/Resources/Public/Fonts/SourceSerifPro/SourceSerifPro-Bold.ttf.woff2">
-<link rel="preload" as="font" crossorigin="" type="font/woff" href="/typo3conf/ext/site_t3demo/Resources/Public/Fonts/Lato/Lato-Light.woff2">
-<link rel="preload" as="font" crossorigin="" type="font/woff" href="/typo3conf/ext/site_t3demo/Resources/Public/Fonts/Lato/Lato-Regular.woff2">
+<link rel="preload" as="font" crossorigin="" type="font/woff" href="{f:uri.resource(path: 'EXT:site-distribution/Resources/Public/Fonts/SourceSerifPro/SourceSerifPro-Bold.ttf.woff2')}">
+<link rel="preload" as="font" crossorigin="" type="font/woff" href="{f:uri.resource(path: 'EXT:site-distribution/Resources/Public/Fonts/Lato/Lato-Light.woff2')}">
+<link rel="preload" as="font" crossorigin="" type="font/woff" href="{f:uri.resource(path: 'EXT:site-distribution/Resources/Public/Fonts/Lato/Lato-Regular.woff2')}">
 
 <script async defer data-website-id="{settings.umami-website-id}" src="https://p.demo.typo3.org/script.js"></script>
 
