--- a/src/extensions/site_t3demo/Resources/Private/Scss/_fonts.scss
+++ b/src/extensions/site_t3demo/Resources/Private/Scss/_fonts.scss
@@ -1,4 +1,4 @@
-$font-directory: '/typo3conf/ext/site_t3demo/Resources/Public/Fonts';
+$font-directory: '../Fonts';
 
 @font-face{
 	font-family: 'SourceSerifPro';
