--- a/src/extensions/demologin/Resources/Private/Templates/DemoLogin.html
+++ b/src/extensions/demologin/Resources/Private/Templates/DemoLogin.html
@@ -10,7 +10,7 @@
 		<div class="form-control-wrap">
 			<label for="t3-username"><f:translate key="login.username.label" extensionName="demologin"/></label>
 			<div class="form-control-holder">
-				<input type="text" id="t3-username" name="username" value="{presetUsername}" aria-label="{f:translate(key: 'login.username')}" placeholder="{f:translate(key: 'login.username')}" class="form-control input-login t3js-clearable t3js-login-username-field" autofocus="autofocus" required="required" />
+				<input type="text" id="t3-username" name="username" value="{presetUsername}" aria-label="{f:translate(key: 'login.username', extensionName: 'demologin')}" placeholder="{f:translate(key: 'login.username', extensionName: 'demologin')}" class="form-control input-login t3js-clearable t3js-login-username-field" autofocus="autofocus" required="required" />
 			</div>
 		</div>
 	</div>
