--- a/src/extensions/site_t3demo/Resources/Private/Contenttypes/Backend/Templates/Mainteaser.html
+++ b/src/extensions/site_t3demo/Resources/Private/Contenttypes/Backend/Templates/Mainteaser.html
@@ -10,8 +10,8 @@
     <f:render partial="Text" arguments="{text: bodytext}" />
     <f:render partial="Link" arguments="{link: link, linklabel: linklabel}" />
 
-    <f:render partial="Warning/NoImage" arguments="{images: allImages-visible, hidden: hidden}" />
-    <f:render partial="Warning/FirstImage" arguments="{images: allImages-visible, hidden: hidden}" />
+    <f:render partial="Warning/NoImage" arguments="{images: allImages, hidden: hidden}" />
+    <f:render partial="Warning/FirstImage" arguments="{images: allImages, hidden: hidden}" />
 </f:section>
 
 </html>
