--- a/src/extensions/site_t3demo/Resources/Private/Scss/_resetbanner.scss
+++ b/src/extensions/site_t3demo/Resources/Private/Scss/_resetbanner.scss
@@ -69,11 +69,11 @@
 		bottom: 5px;
 		width: 40px;
 		height: 40px;
-		[dir="ltr"] & {
-			right: 5px;
-		}
+        right: 5px;
+
 		[dir="rtl"] & {
 			left: 5px;
+            right: auto;
 		}
 		#resetbanner:checked ~ & {
 			display: none;
