--- a/src/extensions/site_t3demo/Resources/Private/Plugins/Felogin/Templates/Login/Login.html
+++ b/src/extensions/site_t3demo/Resources/Private/Plugins/Felogin/Templates/Login/Login.html
@@ -50,7 +50,7 @@
             <label class="b_login__label" for="password">
 							<f:translate key="password" extensionName="site_t3demo"/>
             </label>
-            <f:form.password name="pass" data="{rsa-encryption: ''}" id="password" class="b_login__input" value="iloveapples" additionalAttributes="{required: 'required', autocomplete: 'current-password'}"/>
+            <f:form.password name="pass" data="{rsa-encryption: ''}" id="password" class="b_login__input" value="Iloveapples.1" additionalAttributes="{required: 'required', autocomplete: 'current-password'}"/>
         </div>
 
         <div class="b_login__row b_login__row--submit">
